syntax="proto3";
package hotcat.panel;

import "hotcat/common.proto";
import "google/protobuf/any.proto";



option java_multiple_files = false;
option java_package = "com.github.binarybeing.hotcat.porto.panel";

option java_outer_classname = "PanelGrpcService";

service PanelService{
  rpc showAndGet(FormRequest) returns (DataResponse);
  rpc showError(BasicPanelRequest) returns (DataResponse);
  rpc showMsg(BasicPanelRequest) returns (DataResponse);
  rpc showConfirm(BasicPanelRequest) returns (DataResponse);
  rpc showFileChooserAndGet(FileChooseRequest) returns (StringResponse);
  rpc showProcessing(BasicPanelRequest) returns (StringResponse);
  rpc closeProcessing(StringRequest) returns (StringResponse);
  rpc showSidePanelEditor(SideEditorRequest) returns (StringResponse);
  rpc showSidePanelWebBrowser(StringRequest) returns (StringResponse);
  rpc showFloatMiniEditor(FloatMiniEditorRequest) returns (StringResponse);

}

message BasicPanelRequest {
  int64 eventId = 1;
  string msg = 2;
}

message SideEditorRequest{
  int64 eventId = 1;
  string panelName = 2;
  string fileAbPath = 3;
}

message FormRequest{
  int64 eventId = 1;
  string title = 2;
  optional int32 width = 3;
  repeated google.protobuf.Any  elements = 4;
}

message FileChooseRequest{
  int64 eventId = 1;
  optional string path = 2;
  optional bool typeFile = 3;
  optional bool typeDir = 4;
  repeated string suffixes = 5;
}
//String title, String fromFile, int line, String floatDefaultContent, boolean callback
message FloatMiniEditorRequest{
  int64 eventId = 1;
  string title = 2;
  string fromFile = 3;
  optional int32 line = 4;
  optional string floatDefaultContent = 5;
  optional bool callback = 6;
  optional bool multiLine = 7;
}

message InputElement{
  string label = 1;
  string field = 2;
  string defaultValue = 3;
}

message SelectElement{
  string label = 1;
  string field = 2;
  repeated string name = 3;
  repeated string value = 4;
  string defaultValue = 5;
}

message CheckElement{
  string label = 1;
  string field = 2;
  string defaultValue = 3;
  bool checked = 4;
}

message FormInfo{
  repeated KvPair kvPairs = 1;
}

message KvPair{
  string key = 1;
  string value = 2;
}